logs/v2.theme.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/v2'...
Listing './lib/python3.5/site-packages/v2/theme'...
Listing './lib/python3.5/site-packages/v2/theme/Extensions'...
Listing './lib/python3.5/site-packages/v2/theme/browser'...
Listing './lib/python3.5/site-packages/v2/theme/browser/images'...
Compiling './lib/python3.5/site-packages/v2/theme/browser/interfaces.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (interfaces.py, line 16)
Listing './lib/python3.5/site-packages/v2/theme/browser/javascripts'...
Compiling './lib/python3.5/site-packages/v2/theme/browser/one_column_view.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (one_column_view.py, line 27)
Compiling './lib/python3.5/site-packages/v2/theme/browser/people_view.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (people_view.py, line 27)
Compiling './lib/python3.5/site-packages/v2/theme/browser/searchview.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (searchview.py, line 10)
Listing './lib/python3.5/site-packages/v2/theme/browser/stylesheets'...
Listing './lib/python3.5/site-packages/v2/theme/browser/templates'...
Compiling './lib/python3.5/site-packages/v2/theme/browser/v2_album_view.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (v2_album_view.py, line 29)
Compiling './lib/python3.5/site-packages/v2/theme/browser/v2_folder_view.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (v2_folder_view.py, line 31)
Compiling './lib/python3.5/site-packages/v2/theme/browser/v2_image_view.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (v2_image_view.py, line 30)
Compiling './lib/python3.5/site-packages/v2/theme/browser/v2_people_view.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (v2_people_view.py, line 27)
Compiling './lib/python3.5/site-packages/v2/theme/browser/v2_view.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (v2_view.py, line 215)
Compiling './lib/python3.5/site-packages/v2/theme/browser/view_expanded.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (view_expanded.py, line 32)
Compiling './lib/python3.5/site-packages/v2/theme/migrator.py'...
***   File "./lib/python3.5/site-packages/v2/theme/migrator.py", line 300
    print "LeadImage URL not available. LeadImage not created because: (" + image + ")", sys.exc_info()[1]
                                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/v2/theme/profiles'...
Listing './lib/python3.5/site-packages/v2/theme/profiles/default'...
Listing './lib/python3.5/site-packages/v2/theme/profiles/default/types'...
Listing './lib/python3.5/site-packages/v2/theme/profiles/uninstall'...
Listing './lib/python3.5/site-packages/v2/theme/profiles/uninstall/types'...
Listing './lib/python3.5/site-packages/v2/theme/skins'...
Listing './lib/python3.5/site-packages/v2/theme/skins/v2_theme_custom_images'...
Listing './lib/python3.5/site-packages/v2/theme/skins/v2_theme_custom_templates'...
Listing './lib/python3.5/site-packages/v2/theme/skins/v2_theme_javascripts'...
Listing './lib/python3.5/site-packages/v2/theme/skins/v2_theme_styles'...
Listing './lib/python3.5/site-packages/v2.theme-5.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
